--- a/src/app/pages/imports/import-form.component.html
+++ b/src/app/pages/imports/import-form.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="form" class="d-flex p-3 h-100 border">
-  <div class="w-50">
+<form [formGroup]="form" class="d-flex p-3 h-100">
+  <div >
     <mat-accordion class="shadow-lg">
       <mat-expansion-panel expanded="true" class="mb-3 shadow" hideToggle>
         <mat-expansion-panel-header class="pt-2 pb-2 mb-2 mt-2 p-0">
