--- a/src/app/pages/imports/import-form.component.html
+++ b/src/app/pages/imports/import-form.component.html
@@ -1,32 +1,37 @@
-<form [formGroup]="form" class="d-flex p-3 h-100">
-  <div >
-    <mat-accordion class="shadow-lg">
-      <mat-expansion-panel expanded="true" class="mb-3 shadow" hideToggle>
-        <mat-expansion-panel-header class="pt-2 pb-2 mb-2 mt-2 p-0">
-          <mat-panel-title>
-            <fieldset
-              class="d-flex w-100 justify-content-between align-items-center"
-            >
-              <legend>Importar Arquivo</legend>
-              <i class="fa-solid fa-circle-chevron-down"></i>
-            </fieldset>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div>
-          <input
-            id="file"
-            formControlName="file"
-            type="file"
-            class="form-control w-100"        
-            (change)="fileChanged($event)"
-          />
-        </div>
-        <div class="mt-3">
-          <button type="btn" (click)="import()" class="btn btn-primary w-100">
-            Importar
-          </button>
-        </div>
-      </mat-expansion-panel>
-    </mat-accordion>
-  </div>
-</form>
+<div class="container w-50">
+    <mat-card [formGroup]="form" class="d-flex flex-column p-3">
+        <mat-card-title class="m-2 p-1"> Importar Arquivo </mat-card-title>
+        <mat-card-content class="row m-0">
+            <mat-form-field class="col-12">
+                <mat-label>Senha</mat-label>
+                <input matInput type="password" formControlName="password" />
+            </mat-form-field>
+            <mat-form-field class="col-12">
+                <mat-label>Senha</mat-label>
+                <input matInput type="password" formControlName="password" />
+            </mat-form-field>
+            <mat-form-field class="col-6">
+                <mat-label>Senha</mat-label>
+                <input matInput type="password" formControlName="password" />
+            </mat-form-field>
+            <mat-form-field class="col-6">
+                <mat-label>Senha</mat-label>
+                <input matInput type="password" formControlName="password" />
+            </mat-form-field>
+            <div class="col-12 mt-3">
+                <input
+                    id="file"
+                    formControlName="file"
+                    type="file"
+                    class="form-control w-100"
+                    (change)="fileChanged($event)"
+                />
+            </div>
+        </mat-card-content>
+        <mat-card-footer class="m-2 p-1 mt-3">
+            <button mat-raised-button color="accent" type="btn" (click)="import()" class="btn btn-primary w-100">
+                Importar
+            </button>
+        </mat-card-footer>
+    </mat-card>
+</div>
