--- a/src/app/pages/imports/import-form.component.html
+++ b/src/app/pages/imports/import-form.component.html
@@ -2,22 +2,40 @@
     <mat-card [formGroup]="form" class="d-flex flex-column p-3">
         <mat-card-title class="m-2 p-1"> Importar Arquivo </mat-card-title>
         <mat-card-content class="row m-0">
-            <mat-form-field class="col-12">
-                <mat-label>Senha</mat-label>
-                <input matInput type="password" formControlName="password" />
+            <mat-form-field>
+                <mat-label>Selecione a operadora</mat-label>
+                <mat-select [disabled]="disabled" class="" formControlName="operadora">
+                    <mat-option *ngFor="let operadora of operadoras" [value]="operadora.id">
+                        {{ operadora.name }}
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
-            <mat-form-field class="col-12">
-                <mat-label>Senha</mat-label>
-                <input matInput type="password" formControlName="password" />
+            <mat-form-field>
+                <mat-label>Selecione o tipo de arquivo</mat-label>
+                <mat-select class="" formControlName="fileType">
+                    <mat-option *ngFor="let file of fileTypes" [value]="file.id">
+                        {{ file.name }}
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
-            <mat-form-field class="col-6">
-                <mat-label>Senha</mat-label>
-                <input matInput type="password" formControlName="password" />
-            </mat-form-field>
-            <mat-form-field class="col-6">
-                <mat-label>Senha</mat-label>
-                <input matInput type="password" formControlName="password" />
-            </mat-form-field>
+            <div class="row">
+                <mat-form-field class="col-6">
+                    <mat-label>Selecione o mês</mat-label>
+                    <mat-select formControlName="month" class="">
+                        <mat-option *ngFor="let month of months" [value]="month.id">
+                            {{ month.id + ' - ' + month.name }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field class="col-6">
+                    <mat-label>Selecione o ano</mat-label>
+                    <mat-select formControlName="year" class="">
+                        <mat-option *ngFor="let year of Years" [value]="year">
+                            {{ year }}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
             <div class="col-12 mt-3">
                 <input
                     id="file"
