adiciona modal de erros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column h-100">
-    <div class="border shadow pb-2 pt-2 d-flex w-100 position-fixed bg-white" style="height: 65px; z-index: 10">
+    <div class="border-accent shadow pb-2 pt-2 d-flex w-100 position-fixed bg-white" style="height: 65px; z-index: 10;">
         <div class="d-flex justify-content-between w-100">
             <div class="d-flex">
                 <div class="d-flex">
-                    <img routerLink="/" src="assets/img/tg-logo.png" alt="tg-logo" />
+                    <img routerLink="/" src="assets/img/tg-logo.png" alt="logo" />
                 </div>
             </div>
         </div>
